updated typos in CO1 synonyms

--- a/Count cox1 occurance in GenBank for a list of species.ipynb
+++ b/Count cox1 occurance in GenBank for a list of species.ipynb
@@ -214,12 +214,12 @@
     "    # this is the place to add them.\n",
     "    cox1_synonyms = ['MT-CO1','cox1','cox 1','COX1','COX 1','COI','CO I','coi','COXi', 'COX i',\n",
     "                     'COXI','COX I', 'co i','coI','co I','cox I','coxI',\n",
-    "                     'cytochome oxidase 1','Cytochome oxidase 1','Cytochome Oxidase 1',\n",
-    "                     'cytochome oxidase I','Cytochome oxidase I', 'Cytochome Oxidase I',\n",
-    "                     'cytochome oxidase subunit 1','Cytochome oxidase subunit 1','Cytochome Oxidase subunit 1',\n",
-    "                     'Cytochome Oxidase Subunit 1',\n",
-    "                     'cytochome oxidase subunit I','Cytochome oxidase subunit I','Cytochome Oxidase subunit I',\n",
-    "                     'Cytochome Oxidase Subunit I',\n",
+    "                     'cytochrome oxidase 1','Cytochrome oxidase 1','Cytochrome Oxidase 1',\n",
+    "                     'cytochrome oxidase I','Cytochrome oxidase I', 'Cytochrome Oxidase I',\n",
+    "                     'cytochrome oxidase subunit 1','Cytochrome oxidase subunit 1','Cytochrome Oxidase subunit 1',\n",
+    "                     'Cytochrome Oxidase Subunit 1',\n",
+    "                     'cytochrome oxidase subunit I','Cytochrome oxidase subunit I','Cytochrome Oxidase subunit I',\n",
+    "                     'Cytochrome Oxidase Subunit I',\n",
     "                     'cytochrome c oxidase subunit I', 'Cytochrome c oxidase subunit I', 'Cytochrome C oxidase subunit I',\n",
     "                     'Cytochrome C Oxidase subunit I', 'Cytochrome C Oxidase Subunit I',\n",
     "                     'cytochrome c oxidase subunit 1', 'Cytochrome c oxidase subunit 1', 'Cytochrome C oxidase subunit 1',\n",
